Messagebubble meta data block text overflow fix #3

--- a/src/styles/MessageBubble.css
+++ b/src/styles/MessageBubble.css
@@ -117,7 +117,7 @@
 
 .md-descrip {
   font-size: 0.85rem;
-  max-width: inherit;
+  max-width: 313px;
   overflow-wrap: break-word;
 }
 
